<resources>
    <string name="app_name">Gank</string>
    <string name="title_main">干货集中营</string>

    <string name="empty"> </string>

    <string name="button_navigation_home_text">首页</string>
    <string name="button_navigation_girl_text">福利</string>
    <string name="button_navigation_read_text">闲读</string>
    <string name="button_navigation_video_text">视频</string>

    <string name="action_settings">设置</string>
    <string name="action_heart">收藏</string>
    <string name="action_add">添加</string>
    <string name="action_day_night">黑夜模式</string>
    <string name="action_about">关于</string>

    <string name="action_share">分享</string>
    <string name="share_title">将这张照片分享到…</string>

    <string name="action_save">保存</string>
    <string name="save_success">照片已保存到: %s</string>

    <string name="action_set_wallpaper">设为壁纸</string>
    <string name="set_wallpaper_success">壁纸设置成功</string>
    <string name="set_lock_wallpaper_success">锁屏壁纸设置成功</string>

    <string name="load_fail">加载数据失败!</string>

    <string name="network_error">网络错误</string>
    <string name="network_error_parse">解析错误</string>
    <string name="network_error_connect">连接失败</string>
    <string name="network_error_ssl">证书验证失败</string>
    <string name="network_error_timeout">连接超时</string>
    <string name="network_error_unknown">未知错误</string>

    <string name="introduce">每天一张精选妹纸图，一个精选小视频（视频源地址播放），一篇程序猿精选干货和闲读读那些值得读的。\n\n数据内容来源于代码家的 http://gank.io ， Android 端的设计基于了Google的Material Design，并且感谢所有的开源贡献者。\n\n相较 1.0 版本，代码几乎全部重构，RxJava2 &amp; Retrofit2 &amp;Jsoup实现网络爬虫等等。\n\n我的GitHub: https://github.com/dalingge/GankGirl\n\n我的个人主页: http://dalingge.com\n\n如果你觉的不错希望推荐给你的朋友，你们的打赏是对我最好的支持，非常感谢！\n\n微信：请扫描下面二维码！</string>
    <string name="open_source_libraries_list">com.squareup.retrofit2:retrofit:2.2.0\ncom.squareup.okhttp3:okhttp:3.6.0\nio.reactivex.rxjava2:rxjava:2.0.6\ncom.github.VictorAlbertos.RxCache:runtime:1.8.0&#8212;2.x\ncom.github.bumptech.glide:glide:3.7.0\ncom.google.code.gson:gson:2.4\ncom.jakewharton:butterknife:8.4.0\ncom.uniquestudio:parsingplayer:2.0.4\norg.jsoup:jsoup:1.10.2</string>
    <string name="thank_str">代码家及他的干货集中营\ndrakeet及他的妹纸.gank.io\noxoooo及他的馒头先生\n以及所有开源的程序猿</string>

    <string name="et_error_no_url">还没有网页地址</string>
    <string name="et_error_no_urls">请输入正确的网页地址</string>
    <string name="et_error_no_desc">亲！描述下内容呗！</string>
    <string name="et_error_no_who">请填上你绰号</string>
    <string name="et_error_no_type">谢谢！@类型</string>

    <string name="empty_tips_null">暂无数据</string>
    <string name="empty_tips_netword">请检查你的网络连接</string>
    <string name="empty_tips_btn">重试</string>

    <!--footer-->
    <string name="recycler_footer_loading">正在加载中…</string>
    <string name="recycler_footer_network_error">点击重新加载</string>
    <string name="recycler_footer_end">已经到底了</string>


    <string name="admob_banner_ad_unit_id">ca-app-pub-8983417937200146/4161257710</string>
</resources>
